syntax = "proto3";
package kratos.api;

option go_package = "vendors/internal/conf;conf";

import "google/protobuf/duration.proto";

message Registry {
  message Consul {
    string scheme = 1;
    string addr = 2;
    string prefix = 3;
    google.protobuf.Duration timeout = 4;
  }
  message Etcd {
    repeated string endpoints = 1;
    string username = 2;
    string password = 3;
    google.protobuf.Duration timeout = 4;
  }
  Consul consul = 1;
  Etcd etcd = 2;
}

message TLS {
  string cert_file = 1;
  string key_file = 2;
  string ca_file = 3;
}

message Web {
  string addr = 1;
  TLS tls = 2;
  string custom_endpoint = 3;
}
message GRPC {
  string addr = 1;
  TLS tls = 2;
  string custom_endpoint = 3;
}

message Server {
  Web web = 1;
  GRPC grpc = 2;
  google.protobuf.Duration timeout = 3;
  string jwt_secret = 4;
}

message BilibiliConfig {}

message BilibiliServer {
  message Bilibili {
    Server server = 1;
    Registry registry = 2;
    BilibiliConfig config = 3;
  }
  Bilibili bilibili = 1;
}

message AlistConfig {}

message AlistServer {
  message Alist {
    Server server = 1;
    Registry registry = 2;
    AlistConfig config = 3;
  }
  Alist alist = 1;
}

message EmbyConfig {}

message EmbyServer {
  message Emby {
    Server server = 1;
    Registry registry = 2;
    EmbyConfig config = 3;
  }
  Emby emby = 1;
}

message AllServer {
  message All {
    Server server = 1;
    Registry registry = 2;
    BilibiliConfig bilibili = 3;
    AlistConfig alist = 4;
    EmbyConfig emby = 5;
  }
  All all = 1;
}